// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TableText > should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-2 el-experimental-table-text"
  >
    <span
      class="mocked-styled-1 el-experimental-table-text-content"
    >
      Value
    </span>
  </div>
</DocumentFragment>
`;

exports[`TableText > should match snapshot with icon only 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-2 el-experimental-table-text"
  >
    <span
      class="mocked-styled-0 el-experimental-table-text-icon"
    >
      <svg
        class="el-icon"
        color="inherit"
        data-size="sm"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 11h-7V4a1 1 0 1 0-2 0v7H4a1 1 0 1 0 0 2h7v7a1 1 0 1 0 2 0v-7h7a1 1 0 1 0 0-2Z"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;

exports[`TableText > should match snapshot with icons and label 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-2 el-experimental-table-text"
  >
    <span
      class="mocked-styled-0 el-experimental-table-text-icon"
    >
      <svg
        class="el-icon"
        color="inherit"
        data-size="sm"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 11h-7V4a1 1 0 1 0-2 0v7H4a1 1 0 1 0 0 2h7v7a1 1 0 1 0 2 0v-7h7a1 1 0 1 0 0-2Z"
        />
      </svg>
    </span>
    <span
      class="mocked-styled-1 el-experimental-table-text-content"
    >
      Value
    </span>
    <span
      class="mocked-styled-0 el-experimental-table-text-icon"
    >
      <svg
        class="el-icon"
        color="inherit"
        data-size="sm"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 16.504a.999.999 0 0 1-.71-.29l-6.996-7a1.004 1.004 0 0 1 1.42-1.42l6.286 6.3 6.287-6.3a1.003 1.003 0 1 1 1.42 1.42l-6.997 7a.999.999 0 0 1-.71.29Z"
        />
      </svg>
    </span>
  </div>
</DocumentFragment>
`;
